// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InternalTableBody /> renders snapshot correctly 1`] = `
<div>
  <table>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root StyledTableRowHover-root-2 MuiTableRow-hover"
        style="height: 55px; cursor: initial;"
      >
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          294@mortgage-process_1.0.0-SNAPSHOT
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          Correct Data
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          2020-01-07T04:17:51Z
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          <div
            class="MuiChip-root makeStyles-root-22 makeStyles-root-23"
          >
            <span
              class="MuiChip-label"
            >
              RESERVED
            </span>
          </div>
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          0
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          2020-01-07T04:17:51Z
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          false
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          160
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          Mortgage_Process.MortgageApprovalProcess
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          -1
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
      </tr>
      <tr
        class="MuiTableRow-root StyledTableRowHover-root-2 MuiTableRow-hover"
        style="height: 55px; cursor: initial;"
      >
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          293@evaluation_1.0.0-SNAPSHOT
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          PM Evaluation
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          2019-11-14T09:26:30Z
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          <div
            class="MuiChip-root makeStyles-root-22 makeStyles-root-54"
          >
            <span
              class="MuiChip-label"
            >
              CREATED
            </span>
          </div>
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          You need to evaluate Alessio.
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          0
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          You need to evaluate Alessio.
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          2019-11-14T09:26:30Z
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          false
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          159
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          evaluation
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          -1
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-9 MuiTableCell-body MuiTableCell-sizeSmall"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<InternalTableBody /> renders snapshot correctly with emptyRows 1`] = `
<div>
  <table>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root StyledTableRowHover-root-56 MuiTableRow-hover"
        style="height: 55px; cursor: initial;"
      >
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          294@mortgage-process_1.0.0-SNAPSHOT
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          Correct Data
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          2020-01-07T04:17:51Z
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          <div
            class="MuiChip-root makeStyles-root-76 makeStyles-root-77"
          >
            <span
              class="MuiChip-label"
            >
              RESERVED
            </span>
          </div>
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          0
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          2020-01-07T04:17:51Z
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          false
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          160
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          Mortgage_Process.MortgageApprovalProcess
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          -1
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
      </tr>
      <tr
        class="MuiTableRow-root StyledTableRowHover-root-56 MuiTableRow-hover"
        style="height: 55px; cursor: initial;"
      >
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          293@evaluation_1.0.0-SNAPSHOT
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          PM Evaluation
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          pamAdmin
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          2019-11-14T09:26:30Z
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          <div
            class="MuiChip-root makeStyles-root-76 makeStyles-root-108"
          >
            <span
              class="MuiChip-label"
            >
              CREATED
            </span>
          </div>
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          You need to evaluate Alessio.
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          0
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          You need to evaluate Alessio.
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          2019-11-14T09:26:30Z
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          false
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          159
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          evaluation
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        >
          -1
        </td>
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
        <td
          class="MuiTableCell-root StyledTableCell-root-63 MuiTableCell-body MuiTableCell-sizeSmall"
        />
      </tr>
      <tr
        class="MuiTableRow-root"
        style="height: 165px; background: white;"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
          colspan="25"
        />
      </tr>
    </tbody>
  </table>
</div>
`;
